<resources>
    <string name="app_name">Circuit Loop</string>
    <string name="staffs">Staffs</string>
    <string name="rowMaterials">Row Materials</string>
    <string name="products">Products</string>
    <string name="dialyActivities">Daily Activities</string>
    <string name="shopOwners">Shop Owners</string>
    <string name="rowMaterialList">Row Material List</string>
    <string name="rowMaterialStock">Row Material Stock</string>
    <string name="outOfStock">Out Of Stock</string>
    <string name="belowMinimumStock">Below Minimum Stock</string>
    <string name="list">List</string>
    <string name="stock">Stock</string>
    <string name="rawMaterialName">Raw Material Name</string>
    <string name="rawMaterialMinimumStock">Raw Material Minimum Stock</string>
    <string name="rawMaterialInitialStock">Raw Material Initial Stock</string>
    <string name="_50">50</string>
    <string name="submit">Submit</string>
    <string name="measurementUnit">Measurement Unit</string>
    <string name="date_20_20_2018_time_10_10_am">Date : 20-20-2018 Time : 10:10 AM</string>
    <string name="amounts">Amounts :</string>
    <string name="amounts1">amounts</string>
</resources>
