<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRawMaterialName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rawMaterialName"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/measurementUnit" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerRawMaterialMeasurementUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRawMaterialInitialStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rawMaterialInitialStock"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRawMaterialMinimumStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rawMaterialMinimumStock"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@string/_50" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSubmit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
