<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRowMaterialList"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/list" />

            <Button
                android:id="@+id/buttonRowMaterialStock"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/stock" />

            <Button
                android:id="@+id/buttonOutOfStock"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/outOfStock" />

            <Button
                android:id="@+id/buttonBelowMinimumStock"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/belowMinimumStock" />

            <Button
                android:id="@+id/buttonDailyActivities"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button"
                android:text="@string/dialyActivities" />

            <!--            <Button-->
            <!--                android:id="@+id/button_result_addition2"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/add_results_game_2" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_result_addition"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/add_results_game_1" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_result_addition3"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/add_results_game_3" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_resultv_addition"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/add_50_results" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_scheme_limits"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/scheme_limits" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_time_configuration"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/time_configuration" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_agents"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/allAgents" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_report_by_date"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/report_by_date" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_report_by_agent"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/report_by_agent" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_change_pwd"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/change_credentials" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_prize_configuration"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/prize_configuration" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_status_configuration"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/status_configuration" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_result_statics"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/result_statics" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_reseller_sales_combined_scheme_wise_serial_statistics"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/reseller_sales" />-->

            <!--            <Button-->
            <!--                android:id="@+id/button_attach_results"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:background="@drawable/shape_button"-->
            <!--                android:text="@string/attach_results_05_00_pm" />-->

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
